[project]
name = "texify"
version = "0.2.1"
description = "OCR for latex images"
authors = [{ name = "Vik Paruchuri", email = "vik.paruchuri@gmail.com" }]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
repository = { url = "https://github.com/VikParuchuri/texify" }
keywords = ["ocr", "latex", "markdown", "pdf"]

requires-python = ">=3.10"
dependencies = [
    "transformers>=4.36.2",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "Pillow>=10.1.0",
    "pypdfium2>=4.25.0",
    "python-dotenv>=1.0.0",
    "ftfy>=6.1.3",
]

[project.scripts]
texify = "ocr_image:main"
texify_gui = "run_ocr_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["texify"]

[tool.hatch.build.targets.sdist]
include = ["ocr_app.py", "ocr_image.py", "run_ocr_app.py"]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "evaluate>=0.4.1",
    "rapidfuzz>=3.5.2",
    "pyperclip>=1.8.2",
    "nltk>=3.8.1",
    "streamlit>=1.29.0",
    "streamlit-drawable-canvas-jsretry>=0.9.3",
    "watchdog>=3.0.0",
    "tabulate>=0.9.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
